2009-06-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fixed problem #556836 (pane scrolling when moving between panes)

2009-06-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-search-dialog.cc:
	Replaced deprecated gtk_timeout_remove() with g_source_remove()

2009-06-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fixed problem #584727 (wrong positioning of file popup menu)

2009-06-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-xml-config.cc:
	XML config: rename <TemplateHistory> -> <History>

2009-05-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/eggcellrendererkeys.cc:
	Use gtk_widget_error_bell() for GTK+ >= 2.12

	* src/gnome-cmd-search-dialog.cc:
	Fixed problem #583135 (disabled 'Go to' button in search dialog)

2009-05-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	Fixed problem #583711 (crash when pressing ESC in bookmark dialog)

2009-05-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-key-shortcuts-dialog.cc:
	Fix for crash when assigning new UserAction (no.action)

2009-05-23  Piotr Eljasiak  <epiotr@use.pl>

	* po/POTFILES.in:
	* src/dialogs/Makefile.am:
	* src/dialogs/gnome-cmd-edit-profile-dialog.cc:
	* src/dialogs/gnome-cmd-edit-profile-dialog.h:
	advrename profiles: addded dialog for editing profiles

2009-05-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	advrename profiles: set default template string to "$N"

2009-05-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-dialog.h:
	 Use new profile widget in advrename dialog

2009-05-18  Christopher Zimmermann  <madroach@zakweb.de>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc: